# astradesk

./: .dockerignore  .env.example  .env.example.v2a  .gitignore  .gitlab-ci.yml  .trivyignore  Dockerfile  Dockerfile_v2a  Jenkinsfile  Jenkinsfile_v2a  Makefile  Makefile_v2a  README.md  README.pl.md  README.zh-CN.md  README.zh.md  audit_report.md  audit_report.pl.md  build.gradle.kts  conftest.py  docker-compose.dev.yml  docker-compose.yml  docker-compose_v2a.yaml  instructions.docker-compose.md  instructions.jenkins.md  instructions.makefile.md  instructions.md  mkdocs.yml  netlify.toml  package-lock.json  package.json  puproject.toml  pyproject.toml  settings.gradle.kts  sonar-project.properties  tree.md  tree.tx
.claude/: PIPLINE.md
.docker-config/buildx/: current
.github/workflows/: ci.yml  gh-pages.yml  nextjs.yml  openapi.yml
ansible/: playbook.yml
asyncpg/: __init__.py
audit/evidence/: 18_integration_ci_gate.md  19_pip_audit.txt  39_jetstream_crash_recovery_run.txt  39_jetstream_durable_audit.md  40_dependency_triage.md  40_trivy_admin_portal_js.json  40_trivy_api_gateway_scoped.json  40_trivy_ticket_adapter_java.json  43_deployability_verification.md  v0.3.0_final_validation.md
core/: pyproject.toml
core/src/astradesk_core/: __init__.py  egress.py  exceptions.py  rbac.py  redaction.py
core/src/astradesk_core/utils/: __init__.py  auth.py  events.py  oidc.py
datasets/: README.md
datasets/ops/: polityka_bezpieczenstwa.md
datasets/support/: faq_vpn.md
deploy/chart/: Chart.yaml  deploy_chart_README.md  requirements.yaml  values.yaml
deploy/infra/: README_infra.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
deploy/istio/: 00-namespace.yaml  10-peer-authentication.yaml  20-destinationrule-astradesk-api.yaml  30-authorizationpolicy-namespace.yaml  40-gateway.yaml  41-virtualservice-astradesk-api.yaml  50-cert-manager-certificate.yaml  README_istio.md  certmanager.yaml  deploy_istio_README.md  gateway.yaml  peerauthentication.yaml  readme.md  virtualservice.yaml
deploy/openshift/: README_openshift.md  admin-portal-template.yaml  astradesk-template.yaml  auditor-template.yaml  domain-packs-template.yaml  ticket-adapter-template.yaml
dev/: mock_tickets.py
dev/prometheus/: Dockerfile  prometheus.yml
docs/: README.md  api.md  architecture.md  operations.md  security.md
docs/api/: index.html  index.md
docs/en/: 01_introduction.md  02_architecture_overview.md  03_plan_phase.md  04_build_phase.md  05_test_optimize.md  06_deploy_phase.md  07_monitor_operate.md  08_security_governance.md  09_mcp_gateway_domain_packs.md  10_future_roadmap.md  README.md  glossary.md
docs/js/: mermaid-init.js
docs/pl/: 01_introduction.pl.md  02_architecture_overview.pl.md  03_plan_phase.pl.md  04_build_phase.pl.md  05_test_optimize.pl.md  06_deploy_phase.pl.md  07_monitor_operate.pl.md  08_security_governance.pl.md  09_mcp_gateway_domain_packs.pl.md  10_future_roadmap.pl.md  README.pl.main.md  README.pl.md  glossary.pl.md
docs/roadmap/: engineering_task.md  index.md
docs/styles/: mermaid-card.css
docs/workflows/: openapi-contract.md
docs/zh/: README.zh-CN.main.md
docs/zh-CN/: 09_mcp_gateway_domain_packs.zh.md  README.zh-CN.main.md
fastapi/: __init__.py  testclient.py
grpc/: __init__.py
infra/: main.tf  variables.tf
mcp/: Dockerfile  README.md  __init__.py  config.example.yaml  config.production.yaml  pyproject.toml
mcp/schemas/: tool.schema.json
mcp/src/: __init__.py  exceptions.py
mcp/src/clients/: __init__.py  jira_client.py  kb_client.py
mcp/src/gateway/: __init__.py  cache.py  circuit_breaker.py  config.py  gateway.py  main.py  middleware.py
mcp/src/schemas/: jira.create_issue.schema.json  kb.search.schema.json
mcp/src/security/: __init__.py  audit.py  auth.py  rbac.py  signing.py
mcp/src/tools/: __init__.py  base.py  jira_tool.py  kb_tool.py
mcp/tests/: test_gateway.py  test_pii_middleware.py  test_security.py  test_tools.py
migrations/: 0001_init_pgvector.sql
numpy/: __init__.py
opa_python_client/: __init__.py
openapi/: astradesk-admin.v1.yaml
redis/: __init__.py
redis/asyncio/: __init__.py
respx/: __init__.py
scripts/: check-openapi-version.sh  demo_queries.sh  docker-audit.sh  hot_reload.py  ingest_docs.py  jetstream_crash_recovery.py  license_headers.py  seed-tracker.sh  seed_kb.py  setup-dev-environment.sh
services/: __init__.py
services/admin_api/: Dockerfile  README.md  pyproject.toml
services/admin_api/src/astradesk_admin/: __init__.py  auth.py  main.py
services/admin_api/tests/: test_admin_auth.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/src/agents/: __init__.py  base.py  billing.py  ops.py  support.py
services/api-gateway/src/gateway/: __init__.py  auth_dependency.py  main.py  orchestrator.py
services/api-gateway/src/model_gateway/: __init__.py  base.py  guardrails.py  llm_planner.py  router.py
services/api-gateway/src/model_gateway/providers/: __init__.py  bedrock_provider.py  openai_provider.py  vllm_provider.py
services/api-gateway/src/runtime/: __init__.py  audit.py  authz.py  memory.py  mind.py  models.py  pii.py  planner.py  policy.py  policy_enforcer.py  rag.py  registry.py
services/api-gateway/src/tools/: __init__.py  metrics.py  ops_actions.py  tickets_proxy.py  weather.py
services/api-gateway/tests/runtime/: test_admin_proxy_auth.py  test_audit.py  test_audit_jetstream.py  test_audit_startup.py  test_auth.py  test_auth_dependency.py  test_egress_allowlist.py  test_events.py  test_gateway_ingress.py  test_memory.py  test_models.py  test_oidc_ingress.py  test_pii_emitters.py  test_pii_redaction.py  test_planner.py  test_policy.py  test_policy_choke_point.py  test_policy_enforcer.py  test_policy_startup.py  test_rag.py  test_rbac_invariant.py  test_registry.py  test_span_redaction_guard.py
services/auditor/: Dockerfile  main.py  pyproject.toml
services/auditor/tests/: test_auditor.py
src/: test_connections.py
tests/: integration_tests.py  red_team_tests.py  test_api.py  test_harness.py  test_license_headers.py  test_planner.py
(+291 files in other folders)
