# SPDX-License-Identifier: Apache-2.0
# File: pyproject.toml (root)
# Author: Siergej Sobolewski
# Since: 2025-10-27

[project]
name = "astradesk"
version = "0.3.0"
description = "AstraDesk – Enterprise AI Framework"
requires-python = ">=3.14"
authors = [{ name = "Siergej Sobolewski", email = "s.sobolewski@hotmail.com" }]
license = { text = "Apache-2.0" }

# Root paczka jest meta-koordynatorem monorepo – tu zwykle nie trzymamy zależności runtime.
dependencies = [
    "astradesk-core",
    "astradesk-api-gateway",
    "astradesk-auditor",
    "astradesk-domain-ops",
    "astradesk-domain-finance",
    "astradesk-domain-supply",
    "astradesk-domain-support",
    "datamodel-code-generator>=0.35.0",
    "rank-bm25>=0.2.2",
    "regex>=2025.10.23",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5.7,<0.6.0",
  "mypy>=1.11,<1.12",
  "types-redis>=4.6.0,<5.0",
  "pip-audit>=2.7,<3.0",
]
# GPU optional – używaj tylko na hostach z CUDA; unikamy globalnych CU indexów
#cu121 = [
#  "torch==2.9.0+cu121",
#]


docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocs-material-extensions",
  "pymdown-extensions>=10.8",
  "mkdocs-redoc-tag>=0.2.0",
  "mkdocstrings>=0.23.0",
]

ingestion = [
  "pypdf>=4.2.0",
  "markdown-it-py>=3.0.0",
  "beautifulsoup4>=4.12.3",
]



[tool.uv]
# Pozwól na prerelease (np. Python 3.14.0rc1) – świadomie, bo projekt celuje w 3.14
prerelease = "allow"
#extra-index-url = ["https://download.pytorch.org/whl/cu121"]


[tool.uv.workspace]
members = [
  "core",
  "services/api-gateway",
  "services/auditor", 
  "services/admin_api",
  "packages/domain-support",
  "packages/domain-finance",
  "packages/domain-supply",
  "packages/domain-ops",
]

[tool.uv.sources]
astradesk-core = { workspace = true }
astradesk-api-gateway = { workspace = true }
astradesk-auditor = { workspace = true } 
astradesk-domain-ops = { workspace = true }
astradesk-domain-finance = { workspace = true }
astradesk-domain-supply = { workspace = true }
astradesk-domain-support = { workspace = true }
astradesk-admin-api = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py314"
format = { quote-style = "single" }

[tool.ruff.lint]
# Nowy schemat Ruff 0.5+: sekcja lint w osobnym bloku (masz już zgodny zapis)
ignore = ["TC003", "E501", "F841","D401"]
select = ["E", "F", "W", "I", "N", "D", "UP", "S", "B", "A", "C4", "T20", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
mypy_path = "services/api-gateway/src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=core/src --cov=services/api-gateway/src --cov=packages --cov-report=xml --cov-report=term-missing"
