# SPDX-License-Identifier: Apache-2.0
# File: pyproject.toml (root)
# Author: Siergej Sobolewski
# Since: 2025-10-27

[project]
name = "astradesk"
version = "0.3.0"
description = "AstraDesk – Enterprise AI Framework"
requires-python = ">=3.13"
authors = [{ name = "Siergej Sobolewski", email = "s.sobolewski@hotmail.com" }]
license = { text = "Apache-2.0" }

# Root package is the meta-coordinator of AstraDesk Enterprise AI Agents Framework – runtime deps live in member packages.
dependencies = [
    "astradesk-core",
    "astradesk-api-gateway",
    "astradesk-auditor",
    "astradesk-domain-ops",
    "astradesk-domain-finance",
    "astradesk-domain-supply",
    "astradesk-domain-support",
    "datamodel-code-generator>=0.35.0",
    "rank-bm25>=0.2.2",
    "regex>=2025.10.23",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5.7,<0.6.0",
  "mypy>=1.11,<1.12",
  "types-redis>=4.6.0,<5.0",
  "pip-audit>=2.7,<3.0",
]

docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocs-material-extensions",
  "pymdown-extensions>=10.8",
  "mkdocs-redoc-tag>=0.2.0",
  "mkdocstrings>=0.23.0",
]

ingestion = [
  "pypdf>=4.2.0",
  "markdown-it-py>=3.0.0",
  "beautifulsoup4>=4.12.3",
]

[tool.uv]
prerelease = "allow"
#extra-index-url = ["https://download.pytorch.org/whl/cu121"]

[tool.uv.workspace]
members = [
  "core",
  "services/api-gateway",
  "services/auditor",
  "services/admin_api",
  "packages/domain-support",
  "packages/domain-finance",
  "packages/domain-supply",
  "packages/domain-ops",
]

[tool.uv.sources]
astradesk-core = { workspace = true }
astradesk-api-gateway = { workspace = true }
astradesk-auditor = { workspace = true }
astradesk-domain-ops = { workspace = true }
astradesk-domain-finance = { workspace = true }
astradesk-domain-supply = { workspace = true }
astradesk-domain-support = { workspace = true }
astradesk-admin-api = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py313"
format = { quote-style = "single" }

[tool.ruff.lint]
# Pragmatic ruleset: keep correctness/bug-catching families; drop the aspirational
# docstring (D), security-lint (S), naming (N) and print (T20) families that the
# current codebase does not yet satisfy. Re-enable incrementally as code is hardened.
# E402 (import-not-at-top) and B904 (raise-from) are ignored where sys.path setup and
# existing error handling make them noisy; revisit later.
ignore = [
  "TCH003", "E501", "F841", "E402", "B904",
  "B008",                       # FastAPI Depends() in defaults is idiomatic
  "A001", "A002",               # benign builtin shadowing (e.g. format/input/__package__)
  "RUF001", "RUF002", "RUF003", # intentional non-ASCII (Polish text, em-dashes)
  "RUF006",                     # fire-and-forget tasks in dev scripts
]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "RUF"]

[tool.mypy]
python_version = "3.13"
# Pragmatic baseline: full strict mode disabled until the codebase is annotated.
ignore_missing_imports = true
# This is a multi-root workspace; declare each source root so `mypy .` resolves
# packages by their real import path instead of colliding on bare filenames
# (e.g. mcp `security.auth` vs core `astradesk_core.utils.auth`).
explicit_package_bases = true
namespace_packages = true
mypy_path = [
  "core/src",
  "services/api-gateway/src",
  "services/admin_api/src",
  "mcp/src",
]
# Exclude the legacy duplicate `src/` tree (superseded by services/api-gateway/src)
# and build/venv artifacts.
exclude = '^(src/|\.venv/|build/|dist/|.*/build/)'

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=core/src --cov=services/api-gateway/src --cov=packages --cov-report=xml --cov-report=term-missing"
pythonpath = ["services", "packages", "services/api-gateway/src"]
