# SPDX-License-Identifier: Apache-2.0
# core/pyproject.toml

[project]
name = "astradesk-core"
version = "0.3.0"
description = "Core shared utilities, exceptions, and base models for the AstraDesk Framework."
authors = [{ name = "Siergej Sobolewski", email = "s.sobolewski@hotmail.com" }]
license = "Apache-2.0"  # Исправлено: строка вместо таблицы
requires-python = ">=3.14"

dependencies = [
    "pydantic>=2.12.3",
    "httpx>=0.27,<0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

# Если в core есть несколько пакетов в корне (flat-layout), то добавьте:
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]  # или конкретные имена пакетов, если нужно

# Если используется src-layout, то лучше указать:
# [tool.setuptools.packages.find]
# where = ["src"]