# SPDX-License-Identifier: Apache-2.0
# File: core/pyproject.toml
# Since: 2025-10-27

[project]
name = "astradesk-core"
version = "0.3.0"
description = "AstraDesk shared core library"
authors = [{ name = "Siergej Sobolewski", email = "s.sobolewski@hotmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.13"

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5.7,<0.6.0",
  "mypy>=1.11,<1.12",
  "types-redis>=4.6.0,<5.0",
  "pip-audit>=2.7,<3.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
format = { quote-style = "single" }

[tool.ruff.lint]
ignore = ["TC003", "E501", "F841","D401"]
select = ["E", "F", "W", "I", "N", "D", "UP", "S", "B", "A", "C4", "T20", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=xml --cov-report=term-missing"
