# SPDX-License-Identifier: GPL-2.0-only
# Project: AstraDesk
# File: core/pyproject.toml
# Website: https://www.astradesk.dev
# Repository: https://github.com/SSobol77/astradesk
#
# Description: Configures the associated AstraDesk component or deployment.
#
# Copyright (c) 2026 Siergej Sobolewski
#
# This file is part of AstraDesk.
#
# AstraDesk is licensed under the GNU General Public License version 2 only.
# See the LICENSE file in the project root for the full license text.

[project]
name = "astradesk-core"
version = "0.3.0"
description = "AstraDesk shared core library"
authors = [{ name = "Siergej Sobolewski", email = "s.sobolewski@hotmail.com" }]
license = { text = "GPL-2.0-only" }
requires-python = ">=3.13"

dependencies = [
    "pyjwt[crypto]>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5.7,<0.6.0",
  "mypy>=1.11,<1.12",
  "types-redis>=4.6.0,<5.0",
  "pip-audit>=2.7,<3.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
format = { quote-style = "single" }

[tool.ruff.lint]
# See root pyproject.toml for rationale on the pragmatic ruleset.
ignore = [
  "TCH003", "E501", "F841", "E402", "B904",
  "B008",
  "A001", "A002",
  "RUF001", "RUF002", "RUF003",
  "RUF006",
]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "RUF"]

[tool.mypy]
python_version = "3.13"
# Pragmatic baseline: strict disabled until annotated (see root pyproject.toml).
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=xml --cov-report=term-missing"
