# SPDX-License-Identifier: Apache-2.0
# File: mcp/pyproject.toml v2.0.0
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astradesk-mcp"
version = "2.0.0"
description = "AstraDesk Model Context Protocol Gateway"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
keywords = ["ai", "agents", "mcp", "gateway"]
authors = [
    { name = "Siergej Sobolewski", email = "siergej@astradesk.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "redis>=5.0.1",
    "httpx>=0.26.0",
    "pydantic>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "opentelemetry-exporter-jaeger>=1.22.0",
    "tenacity>=8.2.3",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "passlib>=1.7.4",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "httpx>=0.23.0",
]

[tool.setuptools]
include-package-data = false
packages = [
    "mcp",
    "mcp.src",
    "mcp.src.clients",
    "mcp.src.gateway",
    "mcp.src.security",
    "mcp.src.tools",
]
package-dir = {mcp = ".", "mcp.src" = "src"}

[tool.setuptools.package-data]
mcp = ["config*.yaml", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
