# SPDX-License-Identifier: GPL-2.0-only
# Project: AstraDesk
# File: services/admin_api/pyproject.toml
# Website: https://www.astradesk.dev
# Repository: https://github.com/SSobol77/astradesk
#
# Description: Configures the associated AstraDesk component or deployment.
#
# Copyright (c) 2026 Siergej Sobolewski
#
# This file is part of AstraDesk.
#
# AstraDesk is licensed under the GNU General Public License version 2 only.
# See the LICENSE file in the project root for the full license text.

# services/admin_api/pyproject.toml
[build-system]
# Hatchling is the build backend
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "astradesk-admin_api"            # Project/distribution name (can have hyphens)
version = "0.3.0"
description = "AstraDesk Admin API (FastAPI) — Admin UI backend aligned with AstraDesk platform v0.3.0."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-2.0-only" }
authors = [{ name = "AstraDesk Team" }]

# Runtime deps (trim/extend as needed)
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic[email]>=2.6.0",
  "python-dotenv>=1.0.1",
  # add DB / observability, etc. when needed:
  # "asyncpg>=0.29.0",
  # "opentelemetry-sdk>=1.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.5.7",
  "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/SSobol77/astradesk"

[project.scripts]
# CLI entry; lets you run: uv run astradesk-admin serve
astradesk-admin = "astradesk_admin.__main__:main"

# ---------- Hatch build configuration ----------
[tool.hatch.build.targets.wheel]
# CRITICAL: explicitly include the package directory since project name != package import name
packages = ["src/astradesk_admin"]

[tool.hatch.build.targets.sdist]
# Include sources and metadata in source dist
include = [
  "src/astradesk_admin",
  "pyproject.toml",
  "README.md",
]

[tool.hatch.metadata]
# Allow PEP 440 direct refs if you ever point to local paths/VCS in deps
allow-direct-references = true

# ---------- Tooling (optional but recommended) ----------
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
# Pragmatic baseline: strict disabled until annotated (see root pyproject.toml).
ignore_missing_imports = true
warn_redundant_casts = true
