# SPDX-License-Identifier: GPL-2.0-only
# Project: AstraDesk
# File: services/api-gateway/pyproject.toml
# Website: https://www.astradesk.dev
# Repository: https://github.com/SSobol77/astradesk
#
# Description: Configures the associated AstraDesk component or deployment.
#
# Copyright (c) 2026 Siergej Sobolewski
#
# This file is part of AstraDesk.
#
# AstraDesk is licensed under the GNU General Public License version 2 only.
# See the LICENSE file in the project root for the full license text.

[project]
name = "astradesk-api-gateway"
version = "0.3.0"
description = "AstraDesk's core API Gateway and runtime."
authors = [{ name = "Siergej Sobolewski", email = "s.sobolewski@hotmail.com" }]
license = { text = "GPL-2.0-only" }
requires-python = ">=3.13"

dependencies = [
  # Zależność od naszego współdzielonego pakietu `core`
  "astradesk-core",

  # Zależności frameworka webowego i serwera
  # Lower bound raised to 0.133 (from 0.115): 0.133.0 is the lowest FastAPI
  # release whose own starlette constraint drops the <1.0.0 upper bound
  # (confirmed via PyPI metadata across every FastAPI 0.115-0.139 minor),
  # which is required to resolve the Starlette CVE fixes (0.49.1/1.1.0/1.3.1).
  "fastapi>=0.133,<0.134",
  "uvicorn[standard]>=0.30,<0.31",
  "pydantic>=2.12.3",
  "python-dotenv>=1.0,<2.0",

  # Zależności baz danych i cache
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2,<3.3",
  "redis>=5.0,<5.1",
  "pgvector>=0.2,<0.3",

  # Zależności komunikacji i zdarzeń
  "nats-py>=2.7,<2.8",
  "httpx>=0.27,<0.28",
  "tenacity>=9.0,<10.0",

  # Zależności bezpieczeństwa
  # OIDC/JWT verification is provided by astradesk-core (pyjwt[crypto]);
  # no second JWT library here (ISSUE 009 — single auth stack).
  "kubernetes-asyncio>=20.0,<21.0",

  # Zależności AI / ML
  # sentence-transformers lower bound raised to 5.2.0 (from 3.0): 5.2.0 is the
  # lowest sentence-transformers release whose own transformers constraint
  # raises the <5.0.0 upper bound to <6.0.0 (confirmed via PyPI metadata
  # across the 3.0-5.6 line), required to resolve transformers>=5.3.0 below
  # (clears CVE-2026-4372; the exact-pin change also clears CVE-2024-11392/
  # 11393/11394, fixed upstream at 4.48.0).
  "sentence-transformers>=5.2.0,<5.3.0",
  "transformers>=5.3.0,<5.4.0",
  "torch==2.9.0",

  # Zależności obserwowalności (Observability)
  "python-json-logger>=2.0,<3.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0,<1.0",
  "opentelemetry-semantic-conventions>=0.49b0,<1.0",
  "opentelemetry-api>=1.30,<2.0",
  "opentelemetry-sdk>=1.30,<2.0",
  "opentelemetry-exporter-otlp>=1.30,<2.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.30,<2.0",
  "networkx>=3.3,<4.0",
  "opa-python-client>=0.1.0,<3.0",
  "rank-bm25>=0.2.0",
  "botocore>=1.40.46,<1.40.50",
  # model_gateway/providers/bedrock_provider.py imports aioboto3 directly
  # (async AWS Bedrock Runtime client); must be a direct dependency so
  # package-scoped `uv sync --package astradesk-api-gateway` installs it.
  "aioboto3>=15.4.0",
  "python-dotenv",
]

# Zależności deweloperskie pozostają w głównym `pyproject.toml`,
# ponieważ `uv` potrafi je stamtąd odczytać dla całego workspace.
