# SPDX-License-Identifier: Apache-2.0
# services/auditor/pyproject.toml

[project]
name = "astradesk-auditor"
version = "0.3.0"
description = "AstraDesk's asynchronous microservice for consuming and persisting audit events."
authors = [{ name = "Siergej Sobolewski", email = "s.sobolewski@hotmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
  # Zależność od naszego współdzielonego pakietu `core`.
  # Może być potrzebna w przyszłości do współdzielonych wyjątków lub utils.
  "astradesk-core @ {path = \"../../core\"}",

  # Zależności produkcyjne specyficzne dla tego serwisu.
  "nats-py>=2.7,<2.8",
  "aioboto3>=10.0,<11.0",
  "httpx>=0.27,<0.28",
  "python-json-logger>=2.0,<3.0",
]

[project.optional-dependencies]
# Zależności deweloperskie specyficzne dla testowania tego serwisu.
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "respx>=0.20,<1.0", # Do mockowania zapytań do Elasticsearch
    "pytest-mock>=3.0", # Do mockowania klientów NATS i S3
]

# Konfiguracja narzędzi (ruff, mypy, pytest) jest zdefiniowana w głównym
# `pyproject.toml` i jest automatycznie stosowana do tego pakietu
# przez `uv workspace`. Nie trzeba jej tutaj powtarzać.