# SPDX-License-Identifier: Apache-2.0
# File: services/auditor/pyproject.toml
# Author: Siergej Sobolewski
# Since: 2025-10-27

[project]
name = "astradesk-auditor"
version = "0.3.0"
description = "AstraDesk's asynchronous microservice for consuming and persisting audit events."
authors = [{ name = "Siergej Sobolewski", email = "s.sobolewski@hotmail.com" }]
license = "Apache-2.0"
requires-python = ">=3.14"

dependencies = [
  "astradesk-core",
  "nats-py>=2.7,<2.8",
  "aioboto3>=15.4.0",
  "httpx>=0.27,<0.28",
  "python-json-logger>=2.0,<3.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"