# SPDX-License-Identifier: GPL-2.0-only
# Project: AstraDesk
# File: services/auditor/pyproject.toml
# Website: https://www.astradesk.dev
# Repository: https://github.com/SSobol77/astradesk
#
# Description: Configures the associated AstraDesk component or deployment.
#
# Copyright (c) 2026 Siergej Sobolewski
#
# This file is part of AstraDesk.
#
# AstraDesk is licensed under the GNU General Public License version 2 only.
# See the LICENSE file in the project root for the full license text.

[project]
name = "astradesk-auditor"
version = "0.3.0"
description = "AstraDesk's asynchronous microservice for consuming and persisting audit events."
authors = [{ name = "Siergej Sobolewski", email = "s.sobolewski@hotmail.com" }]
license = "GPL-2.0-only"
requires-python = ">=3.13"

dependencies = [
  "astradesk-core",
  "nats-py>=2.7,<2.8",
  "aioboto3>=15.4.0",
  "httpx>=0.27,<0.28",
  "python-json-logger>=2.0,<3.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
